#
# Copyright (C) 2016 iCub Facility - IIT Istituto Italiano di Tecnologia
# Author: Marco Randazzo marco.randazzo@iit.it
# CopyPolicy: Released under the terms of the GNU GPL v2.0.
#

# add_subdirectory(deprecated)

add_subdirectory(baseControl)
add_subdirectory(baseControl2)
add_subdirectory(baseControl_SIM)
add_subdirectory(baseControl2_SIM)

add_subdirectory(robotGoto)
add_subdirectory(freeFloorViewer)
add_subdirectory(robotPathPlanner)
add_subdirectory(robotGotoExamples)
add_subdirectory(robotPathPlannerExamples)
add_subdirectory(gazeboExamples)
add_subdirectory(localizationServer)
add_subdirectory(mapper2D)
add_subdirectory(mapsExample)
add_subdirectory(mapsSquirico)
add_subdirectory(navigationGUI)
add_subdirectory(multipleLaserTest)
add_subdirectory(simpleVelocityNavigationExamples)

