#
# Copyright (C) 2019 iCub Facility - IIT Istituto Italiano di Tecnologia 
# Author: Marco Randazzo marco.randazzo@iit.it
# CopyPolicy: Released under the terms of the GNU GPL v2.0.
#

add_subdirectory(navigationDeviceTemplate)
add_subdirectory(robotGotoDevice)
add_subdirectory(robotPathPlannerDevice)
add_subdirectory(rosNavigator)
